# GrammarKitDoc

./: .gitignore  .gitmodules  AGENTS.md  DEVELOPMENT.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  scripts.py
.github/workflows/: docs.yml
.opencode/agent/: code-analyst.md  copyeditor.md  drafter.md  example-generator.md  reference-checker.md  techdocs.md  topic-architect.md
.opencode/skills/: human-style.md  tech-writing.md
docs/: features.md  index.md  installation.md  quick-start.md
docs/advanced/: common-issues.md  debugging.md  migration.md  performance.md
docs/advanced-topics/: external-rules.md  grammar-composition.md  performance.md
docs/appendices/: examples.md  faq.md  resources.md
docs/build-integration/: gradle-setup.md  gradle-vs-ide.md
docs/code-generation/: attributes.md  lexer-integration.md  parser-generation.md  psi-customization.md
docs/core-concepts/: attributes.md  bnf-syntax.md  live-preview.md
docs/getting-started/: installation.md  introduction.md  quick-start.md
docs/grammar-development/: error-recovery.md  expression-parsing-editorial-notes.md  expression-parsing.md  external-rules.md  grammar-composition.md  grammar-design.md  grammar-syntax.md  live-preview.md
docs/ide-integration/: language-features.md  (+1 more)
info/: documentation-outline.md  file-list.md  file-meta.md  general_documentation_outline_patterns.md  main-image-description.md  user-task-map.md  writing_style.md
prompts/: answer-question.md  create-doc-from-existing-evidence.md  evidence-only.md  file-meta-prompt.md  new_page.md
(+97 files in other folders)
