[project]
name = "grammarkit-docs"
version = "1.0.0"
description = "Comprehensive documentation for GrammarKit - IntelliJ IDEA plugin for BNF grammars and parser generation"
authors = [
    { name = "GrammarKit Documentation Team" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.7",
    "pygments>=2.17.2",
]

[project.optional-dependencies]
dev = [
    "watchdog>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["docs"]

[tool.hatch.build.targets.wheel.sources]
"docs" = "docs"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "YTT", "B", "A", "C4", "T10", "ISC", "ICN", "PIE", "PT"]
ignore = ["E501", "B008"]